// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: DView renders 1`] = `
<RNCSafeAreaView
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  edges={
    [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#F7F8FA",
        "flexDirection": "column",
        "flexGrow": 1,
      },
      {},
    ]
  }
>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeIn {
        "build": [Function],
        "durationV": 250,
        "randomizeDelay": false,
      }
    }
    style={
      {
        "backgroundColor": "transparent",
        "flex": 1,
        "flexDirection": "column",
        "flexGrow": 1,
        "zIndex": 1,
      }
    }
  >
    <Text>
      Hello world
    </Text>
  </View>
</RNCSafeAreaView>
`;

exports[`component: DView renders background prop 1`] = `
<RNCSafeAreaView
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessible={true}
  edges={
    [
      "bottom",
      "left",
      "right",
      "top",
    ]
  }
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "backgroundColor": "#F7F8FA",
        "flexDirection": "column",
        "flexGrow": 1,
      },
      {},
    ]
  }
>
  <View
    accessibilityIgnoresInvertColors={true}
    style={
      [
        {
          "height": 451.20588235294116,
          "position": "absolute",
          "resizeMode": "cover",
          "top": 0,
          "width": "100%",
          "zIndex": 1,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/assets/images/desmosIcon.png",
        }
      }
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "height": 451.20588235294116,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    entering={
      FadeIn {
        "build": [Function],
        "durationV": 250,
        "randomizeDelay": false,
      }
    }
    style={
      {
        "backgroundColor": "transparent",
        "flex": 1,
        "flexDirection": "column",
        "flexGrow": 1,
        "zIndex": 1,
      }
    }
  >
    <Text>
      Hello world
    </Text>
  </View>
</RNCSafeAreaView>
`;
